Fix dropdown menu position, improve spacing in footer

--- a/styles/main.css
+++ b/styles/main.css
@@ -66,6 +66,7 @@ button {
 
 #dropdown-list {
     position: absolute;
+    top: 80px;
     min-width: max-content;
     right: 2em;
     background-color: #0b2332;
@@ -159,7 +160,7 @@ a {
 }
 
 #company {
-    margin-left: 2%;
+    margin-left: 1.5em;
 }
 
 #company a:hover {
@@ -167,7 +168,7 @@ a {
 }
 
 #contact {
-    margin-right: 2%;
+    margin-right: 1.5em;
 }
 
 #contact a {
